# isucon11-qualify

webapp/rust/: Cargo.toml
webapp/rust/src/: main.rs
