[package]
name = "isucondition"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4", features = ["headers", "json", "multipart"] }
bytes = "1"
chrono = "0.4"
futures = "0.3"
headers = "0.3"
http = "0.2"
jsonwebtoken = "7"
lazy_static = "1"
listenfd = "0.3"
mime = "0.3"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process"] }
tower-cookie-store = { git = "https://github.com/eagletmt/tower-cookie-store", branch = "main" }
tower-http = { version = "0.2", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
